# dual_arm_example

dual_arm_moveit_config/: .setup_assistant  package.xml
dual_arm_moveit_config/config/: dual_arm_base_scene.srdf
dual_arm_moveit_config/launch/: chomp_planning_pipeline.launch.xml  demo.launch  demo_gazebo.launch  dual_arm_base_scene_moveit_controller_manager.launch.xml  dual_arm_moveit_planning_execution.launch  fake_moveit_controller_manager.launch.xml  gazebo.launch  move_group.launch  moveit.rviz  moveit_rviz.launch  ompl_planning_pipeline.launch.xml  planning_context.launch  planning_pipeline.launch.xml  ros_controllers.launch  run_benchmark_ompl.launch  sensor_manager.launch.xml  setup_assistant.launch  trajectory_execution.launch.xml
dual_arm_scene_description/: CMakeLists.txt  README.md  package.xml
dual_arm_scene_description/launch/: base_scene_upload.launch
dual_arm_scene_description/urdf/: base_scene.urdf.xacro  dual_arm_environment.xacro
dual_arm_scene_description/urdf/components/: dual_arm_base.xacro  dual_arm_box.xacro  dual_arm_end_effector.urdf.xacro  dual_arm_end_effector_2F-140.urdf.xacro  ft300.urdf.xacro
dual_arm_scripts/: CMakeLists.txt  package.xml
dual_arm_scripts/src/: dual_arm_script.cpp
